Fixed Staff Page spacing

--- a/src/components/JoinStaffCard/joinStaffCard.scss
+++ b/src/components/JoinStaffCard/joinStaffCard.scss
@@ -59,6 +59,7 @@ $lightGray: #d1d1d1;
 // Miscellaneous
 .cancel-button {
 	padding-right: 10px;
+	padding-bottom: 0px;
 }
 
 .admin-label {
