--- a/src/scss/pages/_joinStaff.scss
+++ b/src/scss/pages/_joinStaff.scss
@@ -1,4 +1,3 @@
-
 // Card
 .move-card {
 	padding-left: 400px;
@@ -11,6 +10,10 @@
  
 .sep-cards {
 	padding-bottom: 30px;
+}
+
+.staff-page-bottom-space {
+	padding-bottom: 386px;
 }
 
 // Divider
